cloudformation/utilityvpc/vpc.json
{
  "AWSTemplateFormatVersion" : "2010-09-09",
  "Description" : "Template for creating the VPC",
  "Outputs": {
    "VpcId":{
      "Description": "VPC created",
      "Value": { "Ref": "VPC" }
    },
    "pubsub1": {
      "Description": "Public subnet from  VPC",
      "Value": { "Ref": "PublicSubnet1" }
    },
    "pubsub2": {
      "Description": "Public subnet from  VPC",
      "Value": { "Ref": "PublicSubnet2" }
    },
    "pubsub3": {
      "Description": "Public subnet 3 from  VPC",
      "Value": { "Ref": "PublicSubnet3" }
    },
    "prvsub1": {
      "Description": "Private network 1 from VPC",
      "Value": { "Ref": "PrivateSubnet1" }
    },
    "prvsub2": {
      "Description": "Private network 2 from  VPC",
      "Value": { "Ref": "PrivateSubnet2" }
    },
    "prvsub3": {
      "Description": "Private network 3 from  VPC",
      "Value": { "Ref": "PrivateSubnet3" }
    }
  },
  "Parameters" : {
    "KeyName": {
      "Type": "AWS::EC2::KeyPair::KeyName"
    },
    "AvailabilityZone1" : {
      "Type" : "String"
    },
    "AvailabilityZone2" : {
      "Type" : "String"
    },
    "AvailabilityZone3" : {
      "Type" : "String"
    },
    "pubcidr1" : {
      "Type" : "String"
    },
    "pubcidr2" : {
      "Type" : "String"
    },
    "pubcidr3" : {
      "Type" : "String"
    },
    "pricidr1" : {
      "Type" : "String"
    },
    "pricidr2" : {
      "Type" : "String"
    },
    "pricidr3" : {
      "Type" : "String"
    },
    "vpccidr" : {
      "Type" : "String"
    },
    "Stackname" : {
      "Type" : "String"
    },
    "idtopeer" : {
      "Type" : "String"
    },
    "InstanceTenancy": {
      "Default": "default",
      "Description": "VPC tenancy: default or dedicated",
      "Type": "String",
      "MinLength": "1",
      "MaxLength": "64",
      "AllowedPattern": "[a-zA-Z][a-zA-Z0-9]*",
      "ConstraintDescription": "either default or dedicated"
    }
  },
  "Mappings" : {
    "AWSNATAMI" : {
      "us-east-1"      : { "AMI" : "ami-184dc970" },
      "us-west-2"      : { "AMI" : "ami-52ff7262" },
      "us-west-1"      : { "AMI" : "ami-3bcc9e7e" },
      "eu-west-1"      : { "AMI" : "ami-0b5b6c7f" },
      "ap-southeast-1" : { "AMI" : "ami-02eb9350" },
      "ap-southeast-2" : { "AMI" : "ami-ab990e91" },
      "ap-northeast-1" : { "AMI" : "ami-14d86d15" },
      "sa-east-1"      : { "AMI" : "ami-0439e619" }
    }
  },
  "Resources" : {
    "VPC" : {
      "Type" : "AWS::EC2::VPC",
      "Properties" : {
        "CidrBlock" : { "Ref" : "vpccidr" },
        "Tags" : [
	        { "Key" : "Name", "Value" : { "Ref": "Stackname" } },
          { "Key" : "Application", "Value" : { "Ref": "Stackname" } },
          { "Key" : "Network", "Value" : "Public" }
        ],
        "EnableDnsHostnames": "true",
        "EnableDnsSupport": "true",
        "InstanceTenancy": { "Ref" : "InstanceTenancy" }
      }
    },
    "InternetGateway" : {
      "Type" : "AWS::EC2::InternetGateway",
      "Properties" : {
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref": "Stackname" } },
          { "Key" : "Network", "Value" : "Public" },
          { "Key" : "Name", "Value" : { "Fn::Join" : [ "-", [ { "Ref": "Stackname" }, "IGW"] ] } }
        ]
      }
    },
    "GatewayToInternet" : {
       "Type" : "AWS::EC2::VPCGatewayAttachment",
       "Properties" : {
         "VpcId" : { "Ref" : "VPC" },
         "InternetGatewayId" : { "Ref" : "InternetGateway" }
       }
    },
     "PublicSubnet1" : {
      "Type" : "AWS::EC2::Subnet",
      "Properties" : {
        "VpcId" : { "Ref" : "VPC" },
        "AvailabilityZone" : { "Ref" : "AvailabilityZone1" },
        "CidrBlock" : { "Ref" : "pubcidr1" },
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref": "Stackname" } },
          { "Key" : "Network", "Value" : { "Fn::Join" : [ "-", [ { "Ref": "Stackname" }, "public1"] ] } },
          { "Key" : "Name", "Value" : { "Fn::Join" : [ "-", [ { "Ref": "Stackname" }, "public1"] ] } }
        ]
      }
    },
    "PublicSubnet2" : {
      "Type" : "AWS::EC2::Subnet",
      "Properties" : {
        "VpcId" : { "Ref" : "VPC" },
	      "AvailabilityZone" : { "Ref" : "AvailabilityZone2" },
        "CidrBlock" : { "Ref" : "pubcidr2" },
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref": "Stackname" } },
          { "Key" : "Network", "Value" : { "Fn::Join" : [ "-", [ { "Ref": "Stackname" }, "public2"] ] } },
          { "Key" : "Name", "Value" : { "Fn::Join" : [ "-", [ { "Ref": "Stackname" }, "public2"] ] } }
        ]
      }
    },
    "PublicSubnet3" : {
      "Type" : "AWS::EC2::Subnet",
      "Properties" : {
        "VpcId" : { "Ref" : "VPC" },
	      "AvailabilityZone" : { "Ref" : "AvailabilityZone3" },
        "CidrBlock" : { "Ref" : "pubcidr3" },
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref": "Stackname" } },
          { "Key" : "Network", "Value" : { "Fn::Join" : [ "-", [ { "Ref": "Stackname" }, "public3"] ] } },
          { "Key" : "Name", "Value" : { "Fn::Join" : [ "-", [ { "Ref": "Stackname" }, "public3"] ] } }
        ]
      }
    },
    "PrivateSubnet1" : {
      "Type" : "AWS::EC2::Subnet",
      "Properties" : {
        "VpcId" : { "Ref" : "VPC" },
	      "AvailabilityZone" : { "Ref" : "AvailabilityZone1" },
        "CidrBlock" : { "Ref" : "pricidr1" },
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref": "Stackname" } },
          { "Key" : "Name", "Value" : { "Fn::Join" : [ "-", [ { "Ref": "Stackname" }, "private1"] ] } }
        ]
      }
    },
    "PrivateSubnet2" : {
      "Type" : "AWS::EC2::Subnet",
      "Properties" : {
        "VpcId" : { "Ref" : "VPC" },
	      "AvailabilityZone" : { "Ref" : "AvailabilityZone2" },
        "CidrBlock" : { "Ref" : "pricidr2" },
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref": "Stackname" } },
          { "Key" : "Name", "Value" : { "Fn::Join" : [ "-", [ { "Ref": "Stackname" }, "private2"] ] } }
        ]
      }
    },
    "PrivateSubnet3" : {
      "Type" : "AWS::EC2::Subnet",
      "Properties" : {
        "VpcId" : { "Ref" : "VPC" },
	      "AvailabilityZone" : { "Ref" : "AvailabilityZone3" },
        "CidrBlock" : { "Ref" : "pricidr3" },
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref": "Stackname" } },
          { "Key" : "Name", "Value" : { "Fn::Join" : [ "-", [ { "Ref": "Stackname" }, "private3"] ] } }
        ]
      }
    },
    "PublicRouteTable" : {
      "Type" : "AWS::EC2::RouteTable",
      "Properties" : {
        "VpcId" : { "Ref" : "VPC" },
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref": "Stackname" } },
          { "Key" : "Network", "Value" : { "Fn::Join" : [ "-", [ { "Ref": "Stackname" }, "public"] ] } },
          { "Key" : "Name", "Value" : { "Fn::Join" : [ "-", [ { "Ref": "Stackname" }, "public"] ] } }
        ]
      }
    },
    "PublicSubnetRouteTableAssociation1" : {
      "Type" : "AWS::EC2::SubnetRouteTableAssociation",
      "Properties" : {
        "SubnetId" : { "Ref" : "PublicSubnet1" },
        "RouteTableId" : { "Ref" : "PublicRouteTable" }
      }
    },
    "PublicSubnetRouteTableAssociation2" : {
      "Type" : "AWS::EC2::SubnetRouteTableAssociation",
      "Properties" : {
        "SubnetId" : { "Ref" : "PublicSubnet2" },
        "RouteTableId" : { "Ref" : "PublicRouteTable" }
      }
    },
    "PublicSubnetRouteTableAssociation3" : {
      "Type" : "AWS::EC2::SubnetRouteTableAssociation",
      "Properties" : {
        "SubnetId" : { "Ref" : "PublicSubnet3" },
        "RouteTableId" : { "Ref" : "PublicRouteTable" }
      }
    },
    "PrivateRouteTable1" : {
      "Type" : "AWS::EC2::RouteTable",
      "Properties" : {
        "VpcId" : { "Ref" : "VPC" },
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref": "Stackname" } },
          { "Key" : "Network", "Value" : { "Fn::Join" : [ "-", [ { "Ref": "Stackname" }, "private"] ] } },
          { "Key" : "Name", "Value" : { "Fn::Join" : [ "-", [ { "Ref": "Stackname" }, "private"] ] } }
        ]
      }
    },
    "PrivateRouteTable2" : {
      "Type" : "AWS::EC2::RouteTable",
      "Properties" : {
        "VpcId" : { "Ref" : "VPC" },
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref": "Stackname" } },
          { "Key" : "Network", "Value" : { "Fn::Join" : [ "-", [ { "Ref": "Stackname" }, "private"] ] } },
          { "Key" : "Name", "Value" : { "Fn::Join" : [ "-", [ { "Ref": "Stackname" }, "private"] ] } }
        ]
      }
    },
    "PrivateRouteTable3" : {
      "Type" : "AWS::EC2::RouteTable",
      "Properties" : {
        "VpcId" : { "Ref" : "VPC" },
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref": "Stackname" } },
          { "Key" : "Network", "Value" : { "Fn::Join" : [ "-", [ { "Ref": "Stackname" }, "private"] ] } },
          { "Key" : "Name", "Value" : { "Fn::Join" : [ "-", [ { "Ref": "Stackname" }, "private"] ] } }
        ]
      }
    },
    "PrivateSubnetRouteTableAssociation1" : {
      "Type" : "AWS::EC2::SubnetRouteTableAssociation",
      "Properties" : {
        "SubnetId" : { "Ref" : "PrivateSubnet1" },
        "RouteTableId" : { "Ref" : "PrivateRouteTable1" }
      }
    },
    "PrivateSubnetRouteTableAssociation2" : {
      "Type" : "AWS::EC2::SubnetRouteTableAssociation",
      "Properties" : {
        "SubnetId" : { "Ref" : "PrivateSubnet2" },
        "RouteTableId" : { "Ref" : "PrivateRouteTable2" }
      }
    },
    "PrivateSubnetRouteTableAssociation3" : {
      "Type" : "AWS::EC2::SubnetRouteTableAssociation",
      "Properties" : {
        "SubnetId" : { "Ref" : "PrivateSubnet3" },
        "RouteTableId" : { "Ref" : "PrivateRouteTable3" }
      }
    },
    "PrivateRoute1" : {
      "Type" : "AWS::EC2::Route",
      "Properties" : {
        "RouteTableId" : { "Ref" : "PrivateRouteTable1" },
        "DestinationCidrBlock" : "0.0.0.0/0",
        "NatGatewayId" : { "Ref" : "NATGateway1" }
      }
    },
    "PrivateRoute2" : {
      "Type" : "AWS::EC2::Route",
      "Properties" : {
        "RouteTableId" : { "Ref" : "PrivateRouteTable2" },
        "DestinationCidrBlock" : "0.0.0.0/0",
        "NatGatewayId" : { "Ref" : "NATGateway1" }
      }
    },
    "PrivateRoute3" : {
      "Type" : "AWS::EC2::Route",
      "Properties" : {
        "RouteTableId" : { "Ref" : "PrivateRouteTable3" },
        "DestinationCidrBlock" : "0.0.0.0/0",
        "NatGatewayId" : { "Ref" : "NATGateway1" }
      }
    },
    "PublicRoute" : {
      "Type" : "AWS::EC2::Route",
      "Properties" : {
        "RouteTableId" : { "Ref" : "PublicRouteTable" },
        "DestinationCidrBlock" : "0.0.0.0/0",
        "GatewayId" : { "Ref" : "InternetGateway" }
      }
    },
    "PeeringRoute1" : {
      "Type" : "AWS::EC2::Route",
      "Properties" : {
        "RouteTableId" : { "Ref" : "PublicRouteTable" },
        "DestinationCidrBlock": "10.6.0.0/16",
        "VpcPeeringConnectionId" : { "Ref" : "VPCPeeringConnection" }
        }
    },
    "PeeringRoute2" : {
      "Type" : "AWS::EC2::Route",
      "Properties" : {
        "RouteTableId" : { "Ref" : "PrivateRouteTable1" },
        "DestinationCidrBlock": "10.6.0.0/16",
        "VpcPeeringConnectionId" : { "Ref" : "VPCPeeringConnection" }
        }
    },
    "PeeringRoute3" : {
      "Type" : "AWS::EC2::Route",
      "Properties" : {
        "RouteTableId" : { "Ref" : "PrivateRouteTable2" },
        "DestinationCidrBlock": "10.6.0.0/16",
        "VpcPeeringConnectionId" : { "Ref" : "VPCPeeringConnection" }
        }
    },
    "PeeringRoute4" : {
      "Type" : "AWS::EC2::Route",
      "Properties" : {
        "RouteTableId" : { "Ref" : "PrivateRouteTable3" },
        "DestinationCidrBlock": "10.6.0.0/16",
        "VpcPeeringConnectionId" : { "Ref" : "VPCPeeringConnection" }
        }
    },
    "PublicNetworkAcl" : {
      "Type" : "AWS::EC2::NetworkAcl",
      "Properties" : {
        "VpcId" : { "Ref" : "VPC" },
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref": "Stackname" } },
          { "Key" : "Network", "Value" : { "Fn::Join" : [ "-", [ { "Ref": "Stackname" }, "public"] ] } },
          { "Key" : "Name", "Value" : { "Fn::Join" : [ "-", [ { "Ref": "Stackname" }, "public"] ] } }
        ]
      }
    },
    "InboundPublicNetworkAclEntry" : {
      "Type" : "AWS::EC2::NetworkAclEntry",
      "Properties" : {
        "NetworkAclId" : { "Ref" : "PublicNetworkAcl" },
        "RuleNumber" : "99",
        "Protocol" : "-1",
        "RuleAction" : "allow",
        "Egress" : "false",
        "CidrBlock" : "0.0.0.0/0"
      }
    },
    "OutboundPublicNetworkAclEntry" : {
      "Type" : "AWS::EC2::NetworkAclEntry",
      "Properties" : {
        "NetworkAclId" : { "Ref" : "PublicNetworkAcl" },
        "RuleNumber" : "99",
        "Protocol" : "-1",
        "RuleAction" : "allow",
        "Egress" : "true",
        "CidrBlock" : "0.0.0.0/0"
      }
    },
    "PublicSubnetNetworkAclAssociation1" : {
      "Type" : "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties" : {
        "SubnetId" : { "Ref" : "PublicSubnet1" },
        "NetworkAclId" : { "Ref" : "PublicNetworkAcl" }
      }
    },
    "PublicSubnetNetworkAclAssociation2" : {
      "Type" : "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties" : {
        "SubnetId" : { "Ref" : "PublicSubnet2" },
        "NetworkAclId" : { "Ref" : "PublicNetworkAcl" }
      }
    },
    "PublicSubnetNetworkAclAssociation3" : {
      "Type" : "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties" : {
        "SubnetId" : { "Ref" : "PublicSubnet3" },
        "NetworkAclId" : { "Ref" : "PublicNetworkAcl" }
      }
    },
    "PrivateNetworkAcl" : {
      "Type" : "AWS::EC2::NetworkAcl",
      "Properties" : {
        "VpcId" : { "Ref" : "VPC" },
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref": "Stackname" } },
          { "Key" : "Network", "Value" : { "Fn::Join" : [ "-", [ { "Ref": "Stackname" }, "private"] ] } },
          { "Key" : "Name", "Value" : { "Fn::Join" : [ "-", [ { "Ref": "Stackname" }, "private"] ] } }
        ]
      }
    },
    "InboundPrivateNetworkAclEntry" : {
      "Type" : "AWS::EC2::NetworkAclEntry",
      "Properties" : {
        "NetworkAclId" : { "Ref" : "PrivateNetworkAcl" },
        "RuleNumber" : "99",
        "Protocol" : "-1",
        "RuleAction" : "allow",
        "Egress" : "false",
        "CidrBlock" : "0.0.0.0/0"
      }
    },
    "OutBoundPrivateNetworkAclEntry" : {
      "Type" : "AWS::EC2::NetworkAclEntry",
      "Properties" : {
        "NetworkAclId" : { "Ref" : "PrivateNetworkAcl" },
        "RuleNumber" : "99",
        "Protocol" : "-1",
        "RuleAction" : "allow",
        "Egress" : "true",
        "CidrBlock" : "0.0.0.0/0"
      }
    },
    "PrivateSubnetNetworkAclAssociation1" : {
      "Type" : "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties" : {
        "SubnetId" : { "Ref" : "PrivateSubnet1" },
        "NetworkAclId" : { "Ref" : "PrivateNetworkAcl" }
      }
    },
    "PrivateSubnetNetworkAclAssociation2" : {
       "Type" : "AWS::EC2::SubnetNetworkAclAssociation",
       "Properties" : {
         "SubnetId" : { "Ref" : "PrivateSubnet2" },
         "NetworkAclId" : { "Ref" : "PrivateNetworkAcl" }
      }
    },
    "PrivateSubnetNetworkAclAssociation3" : {
       "Type" : "AWS::EC2::SubnetNetworkAclAssociation",
       "Properties" : {
         "SubnetId" : { "Ref" : "PrivateSubnet3" },
         "NetworkAclId" : { "Ref" : "PrivateNetworkAcl" }
      }
    },
    "NATGateway1EIP" : {
      "Type" : "AWS::EC2::EIP",
      "Properties" : {
        "Domain" : "vpc"
      }
    },
    "NATGateway1" : {
      "Type" : "AWS::EC2::NatGateway",
      "Properties" : {
        "AllocationId" : {
          "Fn::GetAtt" : [
            "NATGateway1EIP",
            "AllocationId"
          ]
      },
      "SubnetId" : {
        "Ref" : "PublicSubnet1"
       }
     }
   }
  }
}
